@@ -115,8 +115,8 @@ class NADOKA_Config < Nadoka::NDK_ConfigBase
       'NOTICE'  => '{{user}} {msg}',
       'JOIN'    => '+ {user}',
       'NICK'    => '* {user} -> {newnick}',
-      'QUIT'    => '- {user} ({msg})',
-      'PART'    => '- {user} ({msg})',
+      'QUIT'    => '- {user} (QUIT: {msg})',
+      'PART'    => '- {user} (PART: {msg})',
       'KICK'    => '- {user} kicked by {kicker} ({msg})',
       'MODE'    => '* {user} changed mode ({msg})',
       'TOPIC'   => '<{ch} TOPIC> {msg} (by {user})',
@@ -134,8 +134,8 @@ class NADOKA_Config < Nadoka::NDK_ConfigBase
       'NOTICE'  => '{ch} {{user}} {msg}',
       'JOIN'    => '{ch} + {user}',
       'NICK'    => '{ch} * {user} -> {newnick}',
-      'QUIT'    => '{ch} - {user} ({msg})',
-      'PART'    => '{ch} - {user} ({msg})',
+      'QUIT'    => '{ch} - {user} (QUIT: {msg})',
+      'PART'    => '{ch} - {user} (PART: {msg})',
       'KICK'    => '{ch} - {user} kicked by {kicker} ({msg})',
       'MODE'    => '{ch} * {user} changed mode ({msg})',
       'TOPIC'   => '{ch} <{ch} TOPIC> {msg} (by {user})',
